# my-txt-editor

./: CMakeLists.txt  README.md
src/: main.cpp
